# ai_screen_helper

./: CMakeLists.txt
.github/workflows/: build.yml
src/: capture.cpp  capture.h  main.cpp  ocr_winrt.cpp  ocr_winrt.h  overlay.cpp  overlay.h  redact.cpp  redact.h  uia_text.cpp  uia_text.h
